--- a/hacker-monster/hm-rest/src/main/resources/static/index.html
+++ b/hacker-monster/hm-rest/src/main/resources/static/index.html
@@ -71,6 +71,7 @@
         <script src="app.js"></script>
 
         <script src="directive/shop-by-directive.js"></script>
+        <script src="directive/search-criteria-directive.js"></script>
         <script src="factory/authorization-factory.js"></script>
         <script src="service/api-provider-service.js"></script>
 
@@ -82,6 +83,7 @@
         <script src="ui/shopping-cart/shopping-cart.js"></script>
         <script src="ui/login/login.js"></script>
         <script src="ui/register/register.js"></script>
+        <script src="ui/article-content/article-content.js"></script>
 
         <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.0.1/lodash.js" type="text/javascript"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbC88CJ-7KMMZs1GLokAPSIwwmk6p6M1A"></script>
