--- a/hacker-monster/hm-rest/src/main/resources/static/ui/home/home.html
+++ b/hacker-monster/hm-rest/src/main/resources/static/ui/home/home.html
@@ -1,43 +1,4 @@
 <div class="home">
-    <div search-criteria></div>
-    <div class="content">
-        <ul>
-            <li>
-                <div class="col-md-1"><img src="/assets/file-icon.png"></div>
-                <div class="col-md-10">
-                    <a href="#/article-content">Java, Hello World for Beginer</a><br>
-                    <span><i>Started by:</i>&nbsp;&nbsp;<b>Nhut Nguyen</b>, &nbsp;&nbsp;<i>Created: </i>&nbsp;&nbsp;<b>14 Jan 2020</b></span>
-                </div>
-            </li>
-            <li>
-                <div class="col-md-1"><img src="/assets/file-icon.png"></div>
-                <div class="col-md-10">
-                    <a href="#">Java, Hello World for Beginer</a><br>
-                    <span><i>Started by:</i>&nbsp;&nbsp;<b>Nhut Nguyen</b>, &nbsp;&nbsp;<i>Created: </i>&nbsp;&nbsp;<b>14 Jan 2020</b></span>
-                </div>
-            </li>
-            <li>
-                <div class="col-md-1"><img src="/assets/file-icon.png"></div>
-                <div class="col-md-10">
-                    <a href="#">Java, Hello World for Beginer</a><br>
-                    <span><i>Started by:</i>&nbsp;&nbsp;<b>Nhut Nguyen</b>, &nbsp;&nbsp;<i>Created: </i>&nbsp;&nbsp;<b>14 Jan 2020</b></span>
-                </div>
-            </li>
-            <li>
-                <div class="col-md-1"><img src="/assets/file-icon.png"></div>
-                <div class="col-md-10">
-                    <a href="#">Java, Hello World for Beginer</a><br>
-                    <span><i>Started by:</i>&nbsp;&nbsp;<b>Nhut Nguyen</b>, &nbsp;&nbsp;<i>Created: </i>&nbsp;&nbsp;<b>14 Jan 2020</b></span>
-                </div>
-            </li>
-            <li>
-                <div class="col-md-1"><img src="/assets/file-icon.png"></div>
-                <div class="col-md-10">
-                    <a href="#">Java, Hello World for Beginer</a><br>
-                    <span><i>Started by:</i>&nbsp;&nbsp;<b>Nhut Nguyen</b>, &nbsp;&nbsp;<i>Created: </i>&nbsp;&nbsp;<b>14 Jan 2020</b></span>
-                </div>
-            </li>
-        </ul>
-    </div>
+    This is home page
     <div class="show-more"><button class="btn btn-info btn-sm">Show More</button></div>
 </div>
