--- a/hacker-monster/hm-rest/src/main/resources/static/index.html
+++ b/hacker-monster/hm-rest/src/main/resources/static/index.html
@@ -10,57 +10,150 @@
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Itim|Lobster|Montserrat:500|Noto+Serif|Nunito|Patrick+Hand|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Roboto+Slab|Saira" rel="stylesheet">
     </head>
     <body ng-app="myApp" ng-controller="IndexCtrl">
-        <div class="boundary">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <div class="content">
-                    <div class="col-md-2 left-side">
-                        <div class="personal">
-                            <div class="name">
-                                <div class="col-md-10">Hacker Monster</div>
-                                <div class="col-md-2"><a href="#"><span class="glyphicon glyphicon-align-justify"></span></a></div>
-                            </div>
-                            <div class="personal-infor">
-                                <div class="col-md-3"><img src="/assets/iron-man.jpg"></div>
-                                <div class="col-md-9">
-                                    <span><i><b>Nhut Nguyen</b></i></span><br>
-                                    <span><i>PSE</i></span>
-                                </div>
-                            </div>
-                            <div class="setting">
-                                <div class="col-md-3"><a href="#" title="The notification"><span class="glyphicon glyphicon-envelope"></span></a></div>
-                                <div class="col-md-3"><a href="#" title="Setting"><span class="glyphicon glyphicon-cog"></span></a></div>
-                                <div class="col-md-3"><a href="#" title="Login / Register"><span class="glyphicon glyphicon-user"></span></a></div>
-                                <div class="col-md-3"><a href="#" title="The conversation"><span class="glyphicon glyphicon-comment"></span></a></div>
-                            </div>
-                        </div>
-                        <div class="navigation">
-                            <ul>
-                                <li><a href="#">HOME</a></li>
-                                <li><a href="#">NEWS</a></li>
-                                <li><a href="#">TOPIC</a></li>
-                                <ul class="sub-topic">
-                                    <li><a href="#">JAVA</a></li>
-                                    <li><a href="#">MOBILE</a></li>
-                                    <li><a href="#">DATABASE</a></li>
-                                    <li><a href="#">JAVASCRIPT</a></li>
-                                    <li><a href="#">C, C++, C#</a></li>                            
-                                    <li class="remove-bottom-border"><a href="#">HTML, CSS</a></li>
-                                </ul>
-                                <li><a href="#">FEED</a></li>
-                            </ul>
-                        </div>
+    <div class="navigation">
+        <div class="row">
+            <div class="col-md-6">
+                <a href="#" class="logo">Hacker Monster</a>
+                <a href="#/"><i class="glyphicon glyphicon-user"></i></a>
+            </div>
+            <div class="col-md-6">
+                <!-- will be shown after log on -->
+                <!-- <div class="dropdown user-profile" ng-show="authenticated" ng-cloak>
+                    <button class="btn btn-warning dropdown-toggle" type="button" data-toggle="dropdown">
+                        Hi ! {{username}}
+                        <span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Setting</a></li>
+                        <li><a href="javascript:void(0)" ng-click="logout()">Log out</a></li>
+                    </ul>
+                </div> -->
+            </div>
+        </div>
+    </div>
+    <div class="header">
+
+    </div>
+    <div class="search">
+        <ul>
+            <li><a ng-class="{'active':className=='home'}"  ng-click="setClass('home')" href="javascript:void(0)">HOME</a></li>
+            <li><a ng-class="{'active':className=='forum'}" ng-click="setClass('forum')" href="javascript:void(0)">FEED</a></li>
+            <li><a ng-class="{'active':className=='programmes'}" ng-click="setClass('programmes')" href="#/programmes">TRAINING COURSE</a></li>
+            <li><a ng-class="{'active':className=='notify'}" ng-click="setClass('notify')" href="#/notify">DOCUMENTATION</a></li>
+            <li><a ng-class="{'active':className=='about'}" ng-click="setClass('about')" href="#/about">ABOUT</a></li>
+            <li class="search-control">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search"
+                           name="search">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit">
+                            <i class="glyphicon glyphicon-search"></i>
+                        </button>
                     </div>
-                    <div class="col-md-9 right-side">
-                        <div ng-view></div>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="content">
+        <div class="row">
+            <div class="col-md-2 left-side" ng-hide="isFullScreen">
+                <div class="forum">
+                    <div class="panel-title">
+                        <i class="glyphicon glyphicon-education"></i>
+                        <b>COMMUNICATION</b>
+                    </div>
+                    <div class="panel-content">
+                        <ul>
+                            <li><a href="#/">JAVA</a></li>
+                            <li><a href="#/">C-SHARP</a></li>
+                            <li><a href="#/">JAVASCRIPT</a></li>
+                            <li><a href="#/">DATABASE</a></li>
+                            <li><a href="#/">HTML, CSS</a></li>
+                            <li><a href="#/">MOBILE</a></li>
+                            <li><a href="#/">SCALAR</a></li>
+                            <li><a href="#/">GOLANG</a></li>
+                            <li><a href="#/">KOTLIN</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-md-2"></div>
+            <div class="col-md-8 center-side" ng-style="isFullScreen == true ? {'width': '100%'} : {'width': '60%'}">
+                <!-- MAP -->
+                <div class="home">
+                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;
+                    <a href="#/">Cafe Dev</a>
+                    <span ng-click="fullScreen()" class="glyphicon glyphicon-align-justify full-screen" aria-hidden="true"></span>
+                </div>
+                <!-- END MAP -->
+                <div ng-view></div>
+            </div>
+            <div class="col-md-2 right-side" ng-hide="isFullScreen">
+                <div class="chat">
+                    <div class="panel-title">
+                        <i class="glyphicon glyphicon-user"></i>
+                        <b>MEMBERS AVAILABLE</b>
+                    </div>
+                    <div class="panel-content">
+                        <ul>
+                            <li>
+                                <img src="/assets/man.png">
+                                <a href="#/">Tome Cruise</a>
+                            </li>
+                            <li>
+                                <img src="/assets/man.png">
+                                <a href="#/">Nicola</a>
+                            </li>
+                            <li>
+                                <img src="/assets/man.png">
+                                <a href="#/">Tome Cruise</a>
+                            </li>
+                            <li>
+                                <img src="/assets/man.png">
+                                <a href="#/">Tome Cruise</a>
+                            </li>
+                            <li>
+                                <img src="/assets/man.png">
+                                <a href="#/">Tome Cruise</a>
+                            </li>
+                            <li>
+                                <img src="/assets/man.png">
+                                <a href="#/">Tome Cruise</a>
+                            </li>
+                            <li>
+                                <img src="/assets/man.png">
+                                <a href="#/">Tome Cruise</a>
+                            </li>
+                            <li>
+                                <img src="/assets/man.png">
+                                <a href="#/">Tome Cruise</a>
+                            </li>
+                            <li>
+                                <img src="/assets/man.png">
+                                <a href="#/">Tome Cruise</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="footer">
-            footer
+    </div>
+    <div class="footer">
+        <div class="row">
+            <div class="col-md-8">
+                <h3>About US</h3>
+                <p>CafeDev là một diễn đàn thảo luận cho các lập trình viên,
+                    sinh viên, đây là một nơi lý tưởng cho người mới tìm hiểu về những
+                    gì căn bản nhất về lập trình trên Java, Android, iOS, Html,
+                    Javascript, Database... và là nơi họ có thể đăng tải những thắc mắc
+                    của mình về những vấn đề họ cần được giúp đỡ</p>
+            </div>
+            <div class="col-md-4">
+                <h3>Usefull Links</h3>
+                <a href="">Hoc Lập Trình</a><br> <a href="">iCOURES</a>
+            </div>
         </div>
+        <div class="author">Copyright 2019 © CafeDev. All Rights
+            Reserved. Designed by: Nhut Nguyen.</div>
+    </div>
 
         <script src="webjars/jquery/2.1.1/jquery.js"></script>
         <script src="webjars/bootstrap/3.3.7/js/bootstrap.js"></script>
