finished designing for home page

--- a/hacker-monster/hm-rest/src/main/resources/static/index.html
+++ b/hacker-monster/hm-rest/src/main/resources/static/index.html
@@ -165,6 +165,7 @@
 
         <script src="directive/shop-by-directive.js"></script>
         <script src="directive/search-criteria-directive.js"></script>
+        <script src="directive/resize-textarea-directive.js"></script>
         <script src="factory/authorization-factory.js"></script>
         <script src="service/api-provider-service.js"></script>
 
