--- a/hacker-monster/hm-rest/src/main/resources/static/index.html
+++ b/hacker-monster/hm-rest/src/main/resources/static/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/font-lobster.css">
         <link rel="stylesheet" href="css/font-roboto.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/util.css">
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Itim|Lobster|Montserrat:500|Noto+Serif|Nunito|Patrick+Hand|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Roboto+Slab|Saira" rel="stylesheet">
     </head>
     <body ng-app="myApp" ng-controller="IndexCtrl">
@@ -35,10 +37,10 @@
     </div>
     <div class="search">
         <ul>
-            <li><a ng-class="{'active':className=='home'}"  ng-click="setClass('home')" href="javascript:void(0)">HOME</a></li>
-            <li><a ng-class="{'active':className=='forum'}" ng-click="setClass('forum')" href="javascript:void(0)">FEED</a></li>
-            <li><a ng-class="{'active':className=='programmes'}" ng-click="setClass('programmes')" href="#/programmes">TRAINING COURSE</a></li>
-            <li><a ng-class="{'active':className=='notify'}" ng-click="setClass('notify')" href="#/notify">DOCUMENTATION</a></li>
+            <li><a ng-class="{'active':className=='home'}"  ng-click="setClass('home')" href="#/">HOME</a></li>
+            <li><a ng-class="{'active':className=='forum'}" ng-click="setClass('forum')" href="#/feed">FEED</a></li>
+            <li><a ng-class="{'active':className=='programmes'}" ng-click="setClass('programmes')" href="#/course">TRAINING COURSE</a></li>
+            <li><a ng-class="{'active':className=='notify'}" ng-click="setClass('notify')" href="#/document">DOCUMENT</a></li>
             <li><a ng-class="{'active':className=='about'}" ng-click="setClass('about')" href="#/about">ABOUT</a></li>
             <li class="search-control">
                 <div class="input-group">
@@ -63,9 +65,9 @@
                     </div>
                     <div class="panel-content">
                         <ul>
-                            <li><a href="#/">JAVA</a></li>
-                            <li><a href="#/">C-SHARP</a></li>
-                            <li><a href="#/">JAVASCRIPT</a></li>
+                            <li><a href="#/topic/1">JAVA</a></li>
+                            <li><a href="#/topic/2">C-SHARP</a></li>
+                            <li><a href="#/topic/3">JAVASCRIPT</a></li>
                             <li><a href="#/">DATABASE</a></li>
                             <li><a href="#/">HTML, CSS</a></li>
                             <li><a href="#/">MOBILE</a></li>
@@ -161,6 +163,7 @@
         <script src="webjars/angular-route/1.5.9/angular-route.js"></script>
 
         <script src="js/ui-bootstrap-tpls-2.5.0.js"></script>
+        <script src="js/main.js"></script>
         <script src="app.js"></script>
 
         <script src="directive/shop-by-directive.js"></script>
@@ -172,12 +175,15 @@
         <script src="ui/home/home.js"></script>
         <script src="ui/products/products.js"></script>
         <script src="ui/location/location.js"></script>
-        <script src="ui/stories/stories.js"></script>
-        <script src="ui/product-detail/product-detail.js"></script>
+        <script src="ui/topic/topic.js"></script>
+        <script src="ui/about/about.js"></script>
         <script src="ui/shopping-cart/shopping-cart.js"></script>
         <script src="ui/login/login.js"></script>
         <script src="ui/register/register.js"></script>
-        <script src="ui/article-content/article-content.js"></script>
+        <script src="ui/article/article.js"></script>
+        <script src="ui/feed/feed.js"></script>
+        <script src="ui/course/course.js"></script>
+        <script src="ui/document/document.js"></script>
 
         <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.0.1/lodash.js" type="text/javascript"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbC88CJ-7KMMZs1GLokAPSIwwmk6p6M1A"></script>
