Designed login and registration page

--- a/hacker-monster/hm-rest/src/main/resources/static/index.html
+++ b/hacker-monster/hm-rest/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-md-6">
                 <a href="#" class="logo">Hacker Monster</a>
-                <a href="#/"><i class="glyphicon glyphicon-user"></i></a>
+                <a ng-click="openLoginView()" href="javascript:void()"><i class="glyphicon glyphicon-user"></i></a>
             </div>
             <div class="col-md-6">
                 <!-- will be shown after log on -->
