--- a/hacker-monster/hm-rest/src/main/resources/static/ui/register/register.html
+++ b/hacker-monster/hm-rest/src/main/resources/static/ui/register/register.html
@@ -13,7 +13,7 @@
     <br>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-login" ng-click="signup()"><b>SIGN UP NEW ACCOUNT</b></button>
+    <button class="btn btn-primary" ng-click="signup()"><b>SIGN UP NEW ACCOUNT</b></button>
     <br>
     <br>
     <button class="btn btn-warning" ng-click="signupWithEmail()"><b>CONTINUE USING YOUR EMAIL</b></button>
