--- a/hacker-monster/hm-rest/src/main/resources/static/ui/login/login.html
+++ b/hacker-monster/hm-rest/src/main/resources/static/ui/login/login.html
@@ -1,4 +1,5 @@
-<!--<div class="row">-->
+<div class="login">
+    <!--<div class="row">-->
 <!--    <div class="alert alert-danger col-sm-6 col-lg-4" ng-show="error">-->
 <!--        There was a problem logging in. Please try again.-->
 <!--    </div>-->
@@ -16,21 +17,22 @@
 <!--        <button type="submit" class="btn btn-primary">Submit</button>-->
 <!--    </form>-->
 <!--</div>-->
-<div class="modal-header">
-    <h4><b>SING IN TO YOUR ACCOUNT</b></h4>
-</div>
-<div class="modal-body">
-    <input type="text" placeholder="Username">
-    <br>
-    <br>
-    <input type="password" placeholder="Password">
-    <br>
-    <br>
-    <input type="checkbox"> Remember me
-</div>
-<div class="modal-footer">
-    <button class="btn btn-login" ng-click="ok()"><b>LOGIN TO YOUR ACCOUNT</b></button>
-    <br>
-    <br>
-    <button class="btn btn-warning" ng-click="openRegisterView()"><b>REGISTER NEW ACCOUT</b></button>
+    <div class="modal-header">
+        <h4><b>SING IN</b></h4>
+    </div>
+    <div class="modal-body">
+        <input type="text" placeholder="Username">
+        <br>
+        <br>
+        <input type="password" placeholder="Password">
+        <br>
+        <br>
+        <input type="checkbox"> Remember me
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()"><b>LOGIN TO YOUR ACCOUNT</b></button>
+        <br>
+        <br>
+        <button class="btn btn-warning" ng-click="openRegisterView()"><b>REGISTER NEW ACCOUT</b></button>
+    </div>
 </div>
