Make div contains members has fixed position

--- a/hacker-monster/hm-rest/src/main/resources/static/index.html
+++ b/hacker-monster/hm-rest/src/main/resources/static/index.html
@@ -92,7 +92,7 @@
                 <div class="chat">
                     <div class="panel-title">
                         <i class="glyphicon glyphicon-user"></i>
-                        <b>MEMBERS AVAILABLE</b>
+                        <b>MEMBERS</b>
                     </div>
                     <div class="panel-content">
                         <ul>
@@ -116,22 +116,6 @@
                                 <img src="/assets/man.png">
                                 <a href="#/">Tome Cruise</a>
                             </li>
-                            <li>
-                                <img src="/assets/man.png">
-                                <a href="#/">Tome Cruise</a>
-                            </li>
-                            <li>
-                                <img src="/assets/man.png">
-                                <a href="#/">Tome Cruise</a>
-                            </li>
-                            <li>
-                                <img src="/assets/man.png">
-                                <a href="#/">Tome Cruise</a>
-                            </li>
-                            <li>
-                                <img src="/assets/man.png">
-                                <a href="#/">Tome Cruise</a>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -139,22 +123,7 @@
         </div>
     </div>
     <div class="footer">
-        <div class="row">
-            <div class="col-md-8">
-                <h3>About US</h3>
-                <p>CafeDev là một diễn đàn thảo luận cho các lập trình viên,
-                    sinh viên, đây là một nơi lý tưởng cho người mới tìm hiểu về những
-                    gì căn bản nhất về lập trình trên Java, Android, iOS, Html,
-                    Javascript, Database... và là nơi họ có thể đăng tải những thắc mắc
-                    của mình về những vấn đề họ cần được giúp đỡ</p>
-            </div>
-            <div class="col-md-4">
-                <h3>Usefull Links</h3>
-                <a href="">Hoc Lập Trình</a><br> <a href="">iCOURES</a>
-            </div>
-        </div>
-        <div class="author">Copyright 2019 © CafeDev. All Rights
-            Reserved. Designed by: Nhut Nguyen.</div>
+        <div class="author">Copyright 2019 © CafeDev. All Rights Reserved. Designed by: Nhut Nguyen.</div>
     </div>
 
         <script src="webjars/jquery/2.1.1/jquery.js"></script>
